--- a/admin-dashboard-aazalea-rivera-bsit3b/src/pages/Public/Register/Register.css
+++ b/admin-dashboard-aazalea-rivera-bsit3b/src/pages/Public/Register/Register.css
@@ -5,6 +5,16 @@
     font-family: Arial, sans-serif;
   }
   
+  .login-title {
+    font-size: 30px; 
+    font-weight: bold; 
+    color: #444; 
+    text-align: center; 
+    margin-bottom: 15px; 
+    font-family: monospace; 
+    width: 100%;
+  }
+
   body {
     display: flex;
     justify-content: center;
@@ -13,7 +23,6 @@
     background-color: #f4f4f4;
   }
   
-  /* Main container */
   .main-container {
     display: flex;
     flex-direction: column;
@@ -23,7 +32,6 @@
 
   }
   
-  /* Form container */
   .form-container {
     padding: 3rem 2rem;
     background-color: #fff;
@@ -119,7 +127,7 @@
   }
   
   .errors {
-    color: red;
+    color: rgb(241, 0, 0);
     font-size: 12px;
     margin-top: 8px;
     text-align: left;
