--- a/admin-dashboard-aazalea-rivera-bsit3b/src/pages/Main/Main.css
+++ b/admin-dashboard-aazalea-rivera-bsit3b/src/pages/Main/Main.css
@@ -3,19 +3,27 @@
   overflow: hidden;
   max-height: 100vh;
 }
+
 .Main .container {
   display: flex;
   width: 100vw;
+  background-color: lightsteelblue;
 }
+
 .Main .container .outlet {
   flex-grow: 3;
   padding: 1rem;
+  overflow-y: auto; 
+  height: 100vh; 
 }
+
 .Main .container .navigation {
   background-color: aliceblue;
   padding-top: 40px;
   height: 100vh;
+  overflow-y: auto; 
 }
+
 .Main .container .navigation ul {
   list-style: none;
   overflow: hidden;
@@ -26,10 +34,12 @@
 .Main .container .navigation ul li {
   padding: 10px 80px 10px 20px;
 }
+
 .Main .container .navigation ul li.active,
 .Main .container .navigation ul li:hover {
   background: #ccc;
 }
+
 .Main .container .navigation ul li a {
   text-decoration: none;
 }
